LPS-158201 Line wrap correction

--- a/modules/apps/site-initializer/site-initializer-raylife-ap/src/main/resources/site-initializer/fragments/group/src/common/components/table/index.css
+++ b/modules/apps/site-initializer/site-initializer-raylife-ap/src/main/resources/site-initializer/fragments/group/src/common/components/table/index.css
@@ -1,6 +1,10 @@
+.general-table{
+  white-space: nowrap !important;
+}
+
 .general-table .btn-table .lexicon-icon {
-  font-size: 15px;
   color: rgb(137, 137, 137);
+  font-size: 15px;
 }
 
 .general-table .header{
